Kubernetes/Ingress/ingress-router.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-router
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/custom-response-headers: "Access-Control-Allow-Origin:*||Access-Control-Allow-Methods:GET,POST,OPTIONS||Access-Control-Allow-Headers:DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range||Access-Control-Expose-Headers:Content-Length,Content-Range"
    traefik.ingress.kubernetes.io/rule-type: PathPrefixStrip
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui-cluster-ip
                port:
                  number: 80
          - path: /lighting
            pathType: Prefix
            backend:
              service:
                name: lighting-service-cluster-ip
                port:
                  number: 8000
          - path: /power
            pathType: Prefix
            backend:
              service:
                name: power-service-cluster-ip
                port:
                  number: 8000
          - path: /devices
            pathType: Prefix
            backend:
              service:
                name: device-service-cluster-ip
                port:
                  number: 8000
          - path: /displays
            pathType: Prefix
            backend:
              service:
                name: display-service-cluster-ip
                port:
                  number: 8000
          - path: /scenes
            pathType: Prefix
            backend:
              service:
                name: scene-service-cluster-ip
                port:
                  number: 8000
          - path: /media
            pathType: Prefix
            backend:
              service:
                name: media-drive-service-cluster-ip
                port:
                  number: 5001
